[gd_scene format=3 uid="uid://bu4jei4n5c7nu"]

[ext_resource type="Theme" uid="uid://chcbl2vw654h0" path="res://scenes/ui/game_ui_theme.tres" id="1_2yiqu"]
[ext_resource type="Script" uid="uid://gr0damoj24b6" path="res://scenes/ui/tools_panel.gd" id="2_0jxvs"]
[ext_resource type="Texture2D" uid="uid://bdgmdr2gr64ab" path="res://assets/game/objects/basic_tools_and_meterials.png" id="2_a7ivs"]
[ext_resource type="Texture2D" uid="uid://p446yjluplew" path="res://assets/game/objects/basic_plants.png" id="3_0jxvs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gbtgy"]
atlas = ExtResource("2_a7ivs")
region = Rect2(16, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_a6726"]
load_path = "res://.godot/imported/basic_tools_and_meterials.png-dc4e25f18f664f6d22b0d3438dace52c.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_3neg6"]
atlas = SubResource("CompressedTexture2D_a6726")
region = Rect2(32, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ur6ba"]
load_path = "res://.godot/imported/basic_tools_and_meterials.png-dc4e25f18f664f6d22b0d3438dace52c.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_bdu3n"]
atlas = SubResource("CompressedTexture2D_ur6ba")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_62b2c"]
atlas = ExtResource("3_0jxvs")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_icge2"]
load_path = "res://.godot/imported/basic_plants.png-95b9b15040aa30969080ee5e6985e7ef.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_n1kta"]
atlas = SubResource("CompressedTexture2D_icge2")
region = Rect2(0, 16, 16, 16)

[node name="ToolsPanel" type="PanelContainer" unique_id=1992011331]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
theme = ExtResource("1_2yiqu")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_0jxvs")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1364680540]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" unique_id=1587421061]
layout_mode = 2

[node name="ToolAxe" type="Button" parent="MarginContainer/HBoxContainer" unique_id=349390200]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_gbtgy")
icon_alignment = 1

[node name="ToolTilling" type="Button" parent="MarginContainer/HBoxContainer" unique_id=1704975914]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_3neg6")
icon_alignment = 1

[node name="ToolWateringCan" type="Button" parent="MarginContainer/HBoxContainer" unique_id=310716342]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_bdu3n")
icon_alignment = 1

[node name="ToolCorn" type="Button" parent="MarginContainer/HBoxContainer" unique_id=1192608266]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_62b2c")
icon_alignment = 1

[node name="ToolTomato" type="Button" parent="MarginContainer/HBoxContainer" unique_id=401219924]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_n1kta")
icon_alignment = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolAxe" to="." method="_on_tool_axe_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolTilling" to="." method="_on_tool_tilling_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolWateringCan" to="." method="_on_tool_watering_can_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolCorn" to="." method="_on_tool_corn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ToolTomato" to="." method="_on_tool_tomato_pressed"]
